[package]
name = "timetable"
version = "0.1.0"
authors = ["Kepler Sticka-Jones <kepler+git@stickajones.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.2", features = ["postgres"] }
dotenv = "0.14.1"
actix-web = "1.0"
env_logger = "0.6.2"
